# Yolov8-Mind2S

./: LICENSE  README.md  pyproject.toml  requirements-openvino.txt  requirements.txt  yolo_detect.py  yolo_interactive.py  yolo_web.py
legacy/: Detect-001.py  Detect-003.py  README.md  Setup-YOLO-GPU-Webcam.sh
scripts/: install_systemd_web.sh  run_detect.sh  run_interactive.sh  run_web.sh  setup_mind2s_ubuntu.sh
src/yolov8_mind2s/: __init__.py  detect.py  devices.py  interactive.py  model.py  utils.py
src/yolov8_mind2s/web/: app.py
systemd/: README.md  yolov8-web.service
tools/: benchmark_devices.py
