[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov8-mind2s"
version = "1.0.0"
description = "YOLOv8 real-time detection tuned for Khadas Mind 2S (Intel CPU/GPU/NPU) + optional NVIDIA CUDA"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ultralytics>=8.0.0",
  "opencv-python>=4.8.0.76",
  "numpy>=1.23.0",
  "screeninfo>=0.8.1",
  "psutil>=5.9.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
